--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA
+    implementation 'mysql:mysql-connector-java:8.0.33' // MySQL Driver
+    implementation 'org.springframework.boot:spring-boot-starter-validation' // Validation
 }
 
 tasks.named('test') {
