--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=bu3-intern-ecommerce
+
+spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:26364/tstDb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=CHsXFfTMimNsRbOAVnSSJcqdNBgrMyTV
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
