--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA
     implementation 'mysql:mysql-connector-java:8.0.33' // MySQL Driver
     implementation 'org.springframework.boot:spring-boot-starter-validation' // Validation
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
