--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=bu3-intern-ecommerce
 
-spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:26364/tstDb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:26364/tstDb?useSSL=true&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=CHsXFfTMimNsRbOAVnSSJcqdNBgrMyTV
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,3 +8,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Connection Pool (HikariCP)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=20000
