--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+# Swagger config
+openapi.service.api-docs = E-commerce Service API
+openapi.service.title = This API exposes endpoints to manage demo
+openapi.service.version = 1.0
 # Connection Pool (HikariCP)
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
