--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=bu3-intern-ecommerce
 
+# MySql
 spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:26364/tstDb?useSSL=true&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=CHsXFfTMimNsRbOAVnSSJcqdNBgrMyTV
@@ -13,6 +14,7 @@ spring.jpa.show-sql=true
 openapi.service.api-docs = E-commerce Service API
 openapi.service.title = This API exposes endpoints to manage demo
 openapi.service.version = 1.0
+
 # Connection Pool (HikariCP)
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
