--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+# C?u hình Hibernate ?? t? ??ng chuy?n ??i camelCase sang snake_case
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 
 # Swagger config
 openapi.service.api-docs = E-commerce Service API
