--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=CHsXFfTMimNsRbOAVnSSJcqdNBgrMyTV
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate settings
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 # C?u hình Hibernate ?? t? ??ng chuy?n ??i camelCase sang snake_case
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
