--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     // Spring Boot Core
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc' // JDBC Support
+//    implementation 'org.springframework.boot:spring-boot-starter-jdbc' // JDBC Support
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
