--- a/build.gradle
+++ b/build.gradle
@@ -38,10 +38,11 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.33'
 
     // Security
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-//    testImplementation 'org.springframework.security:spring-security-test'
-//    testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // Sử dụng Jackson để parse JWT
+    testImplementation 'org.springframework.security:spring-security-test'
 
     // Lombok (Giảm boilerplate code)
     compileOnly 'org.projectlombok:lombok'
