--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=bu3-intern-ecommerce
 
+jwt.secret=AOIUSODHFSIODYFIJBNKAJGSDIHFDOHSDIFSODIFUOSDFHJKSJDHFSDF
+jwt.expiration=86400000
 # MySql
 spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:26364/tstDb?useSSL=true&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
@@ -9,7 +11,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-# C?u hình Hibernate ?? t? ??ng chuy?n ??i camelCase sang snake_case
+# C?u hï¿½nh Hibernate ?? t? ??ng chuy?n ??i camelCase sang snake_case
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 
 # Swagger config
