--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.application.name=bu3-intern-ecommerce
 jwt.secret=AOIUSODHFSIODYFIJBNKAJGSDIHFDOHSDIFSODIFUOSDFHJKSJDHFSDF
 jwt.expiration=86400000
 # MySql
-spring.datasource.url=jdbc:mysql://turntable.proxy.rlwy.net:26364/tstDb?useSSL=true&allowPublicKeyRetrieval=true&serverTimezone=UTC
+# C?u hình k?t n?i MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/tstDB
 spring.datasource.username=root
-spring.datasource.password=CHsXFfTMimNsRbOAVnSSJcqdNBgrMyTV
+spring.datasource.password=142857
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate settings
